[package]
name = "podders"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
keywords = ["bioinformatics", "nanopore", "file-parsing", "sequencing"]
authors = ["Rory Munro <rory.munro@nottingham.ac.uk"]
description = "Write uncompressed Pod5 files in native rust. No FFI! PODDDDERS"
readme = "README.md"
repository = "https://github.com/adoni5/podders/"
documentation = "https://docs.rs/podders"
categories = ["science", "filesystem"]

[dependencies]
arrow = "49.0.0"
env_logger = "0.10.1"
flatbuffers = "23.5.26"
log = "0.4.20"
uuid = { version = "1.6.1", features = ["v4"] }
